Fix language menu z-index
Closes #232

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,7 @@ footer {
   border-top: 1px solid rgba(0, 0, 0, 0.6);
   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);
   font-size: 0.8rem;
-  z-index: 1000;
+  z-index: 999;
 }
 
 footer,
